tests/ui/no_required_attribute.rs
use simple_builder::Builder;

#[derive(Builder)]
struct Data {
    number: f64,
}

fn main() {}
